--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -1,8 +1,9 @@
 body {
-    background: #fafafa;
-    color: #333333;
-    margin-top: 5rem;
-  }
+  background: #fafafa;
+  color: #333333;
+  margin-top: 5rem;
+  font-family: 'Montserrat', sans-serif;
+}
   
   h1, h2, h3, h4, h5, h6 {
     color: #444444;
@@ -38,6 +39,7 @@ body {
   
   .article-title {
     color: #444444;
+    font-family: 'Montserrat', sans-serif;
   }
   
   a.article-title:hover {
@@ -81,4 +83,5 @@ body {
   
   .account-heading {
     font-size: 2.5rem;
+    font-family: 'Montserrat', sans-serif;
   }
