--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -10,6 +10,10 @@
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Login</button>
+                <small class="text-muted m-l2">
+                    <a href="{% url 'password_reset' %}">Forgot Password?</a>
+
+                </small>
             </div>
 
         </form>
